tests/src/frontend/typechecking/invalid/mutable_lambda_6.sk
mutable class Foo() {
  mutable fun doIt(): void {
    void
  }
}

fun apply(f: () ~> void): void {
  f()
}

fun no(): void {
  f = mutable Foo();
  apply(f.doIt)
}
